Fix visibility and alignment of topbar message

--- a/src/sass/common/header.scss
+++ b/src/sass/common/header.scss
@@ -13,6 +13,9 @@
     #gmt-clock {
         white-space: nowrap;
     }
+    .upgrademessage {
+        text-align: center;
+    }
     .upgrademessage a {
         @include link-button;
         border-radius: 2px;
